Bug 1773271 - Avoid distorting contact pictures in message header pane. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D148639

--HG--
extra : histedit_source : e34557cc34f791387964e08fc5d9ebd1a9482b89

--- a/mail/themes/shared/mail/messageHeader.css
+++ b/mail/themes/shared/mail/messageHeader.css
@@ -933,6 +933,7 @@ button.show-more-recipients:hover {
 .recipient-avatar img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .message-header-show-recipient-avatar #expandedfromBox .recipient-avatar {
